Sat Oct 15 00:54:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_exec_cmd): use UTF-8 version aspawn.
	  [ruby-dev:49838] [Bug #12841]

Fri Oct 14 22:26:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse/kwargs.rb (OptionParser#define_by_keywords):
	  [EXPERIMENTAL] extract command line option definitions from the
	  information of keyword arguments.

Fri Oct 14 18:27:18 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* object.c: Improve documentation for Float conversion.
	  [ruby-core:71661][Bug #11736][ci skip]

Fri Oct 14 18:00:20 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/logger.rb: Improve Logger.new option documentation.
	  [Feature #12803][ruby-core:77467]

Fri Oct 14 17:20:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (make_switch, parse_in_order): unify underscores
	  to hyphens.

Fri Oct 14 10:48:37 2016  Eric Wong  <e@80x24.org>

	* lib/webrick/utils.rb (TimeoutHandler): use monotonic clock
	  (watch): ditto

Thu Oct 13 19:41:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): use IO to write to copy to duplex IO.
	  http://twitter.com/knu/status/786505317974585344

Thu Oct 13 17:05:57 2016  Dwain Faithfull  <dwfaithfull@gmail.com>

	* hash.c (rb_hash_compact, rb_hash_compact_bang): Removes nil
	  values from the original hash, to port Active Support behavior.
	  [Feature #11818]

Thu Oct 13 11:35:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sort_bang, rb_ary_sort, rb_ary_sort_by_bang):
	  [DOC] describe that sort may not be stable.

	* enum.c (enum_sort, enum_sort_by): ditto.

Thu Oct 13 11:31:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/xpath/test_text.rb (test_ancestors): Array#sort may
	  not be stable.  [ruby-core:76088] [Bug #12509]

	* test/rss/test_maker_{0.9,1.0,2.0}.rb (test_items): ditto.

Thu Oct 13 10:37:31 2016  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: wording fix
